# ThreeAngeles

./: CMakeLists.txt  Readme.md  main.cpp
geometry/inc/: custom_assert.hpp  double_operations.hpp  line.hpp  octree.hpp  plane.hpp  point.hpp  segment.hpp  triangle.hpp  vector.hpp
geometry/src/: CMakeLists.txt  line.cpp  plane.cpp  segment.cpp  triangle.cpp
inc/: double_op.hpp  double_operations.hpp  geo_except.hpp  point.hpp  vector.hpp
inc/geometry/: line.hpp  plane.hpp  point.hpp  segment.hpp  triangle.hpp  vector.hpp
shaders/: shader.frag  shader.vert
src/geometry/: vector.cpp
tests/: CMakeLists.txt
tests/ete/: 014.answer  015.answer  016.answer  017.answer  019.answer  020.answer  021.answer  CMakeLists.txt  ete.cpp
vulkan/inc/: app.hpp  camera.hpp  descriptor.hpp  device.hpp  keyboard.hpp  model.hpp  object.hpp  pipeline.hpp  render.hpp  render_system.hpp  swap_chain.hpp  uniform_buffer.hpp  window.hpp
vulkan/src/: app.cpp  camera.cpp  descriptor.cpp  device.cpp  keyboard.cpp  model.cpp  pipeline.cpp  render.cpp  render_system.cpp  swap_chain.cpp  uniform_buffer.cpp  window.cpp
